# lovoalign

./: .gitignore  CMakeLists.txt  LICENSE  README.md
input/: lovoalign.inp
src/: .release.sh.swp  Makefile  Makefile.default  bijetype.f90  computegdt.f90  configure  dist.f90  dval.f90  file_operations.f90  flashsort.f  get_nearest.f90  getpars.f90  getrmsd.f90  getrmsd2.f90  help.f90  ic.f90  initial.f90  initrandom.f90  inputpars.f90  ioformat.f90  ival.f90  jacobi.f  length.f90  letter.f90  lovoalign.f90  moveprot.f90  nonbscore.f90  optim.f  orderpdb.f90  orprot.f90  printdata.f90  procrustes.f90  prodin.f90  protall.f90  pseudoprot.f90  random.f90  randomini.f90  readfasta.f90  readfile.f90  readlist.f90  (+12 more)
wiki/: LovoAlign.wiki
